Fix a bug in updating physical backing size

|physical_size_| in ViewAndroid objects are valid from wcva down,
while that in WindowAndroid is empty and not used. When adding a
child, Empty physical size should not be propagated down since it
can overwrite valid size in the children. It handles WindowAndroid
case as well, in more general fashion.

This changes fixes the test that became flaky by
https://crrev.com/2842693005.

BUG=721906

Review-Url: https://codereview.chromium.org/2890713002
Cr-Commit-Position: refs/heads/master@{#472694}

Former-commit-id: 3577357065de1e5a173163335406faa28932c07c